update 404.md & _config.yml

--- a/404.md
+++ b/404.md
@@ -2,4 +2,4 @@
 permalink: /404.html
 ---
 # Doesn't look like that page exists...
-<INPUT TYPE="button" VALUE="Go home?" onClick="history.go(-1);">
+Go [back home](/Deanna-Minasian/)?
