--- a/_posts/2022-03-09-EAD.md
+++ b/_posts/2022-03-09-EAD.md
@@ -3,3 +3,4 @@ layout: post
 title:  "EAD Encoding"
 ---
 # EAD Encoding Showcase
+Below are screenshots and downloadable examples of MARC records encoded to EAD standards.
