--- a/_posts/2022-03-09-EAD.md
+++ b/_posts/2022-03-09-EAD.md
@@ -2,5 +2,7 @@
 layout: post
 title:  "EAD Encoding"
 ---
-# EAD Encoding Showcase
+# XML Encoding: EAD Standard
 Below are screenshots and downloadable examples of MARC records encoded to EAD standards.
+
+<!-- ![oXygen Screenshot - EAD XML]( LINK HERE ) -->
